add forms for add post

--- a/basketforum/templates/blog/base.html
+++ b/basketforum/templates/blog/base.html
@@ -14,10 +14,10 @@
     </header>
     <nav>
       <ul>
-        <li><a href="{% url 'main' %}">Главная</a></li>
+        <li><a href="{% url 'main' %}" class="register-btn">Главная</a></li>
         <li><a href="{% url 'posts' %}">Посты</a></li>
         <li><a href="{% url 'rule' %}">Правила</a></li>
-        <li><a href="{% url 'login' %}">Вход</a></li>
+        <li><a href="{% url 'login' %}" >Вход</a></li>
         <li><a href="{% url 'register' %}" class="register-btn">Регистрация</a></li>
       </ul>
     </nav>
