--- a/basketforum/templates/blog/main.html
+++ b/basketforum/templates/blog/main.html
@@ -1,2 +1,15 @@
 {% extends 'blog/base.html' %}
 {% load static %}
+
+{% block content %}
+<h2>Добро пожаловать на баскетбольный форум!</h2>
+<hr>
+<p>Здесь вы найдете всю информацию о баскетболе, общение с единомышленниками и много интересных тем для обсуждения. Наша
+    миссия - объединить баскетбольное сообщество и создать площадку для обмена опытом и знаниями. Здесь вы найдете
+    последние новости, советы от профессионалов, обзоры матчей, аналитику и многое другое. Присоединяйтесь к нам, чтобы
+    поделиться своим опытом, задать вопросы и общаться с другими баскетболистами со всего мира!</p>
+<p>У нас каждый найдет для себя что-то интересное!</p>
+<p>Кто-то может стать автором и писать большие посты или небольшие посты</p>
+<p>А кто-то читать это все!</p>
+<p>В скором времени мы добавим обсуждения,лайки,коментарии,личный кабинет и много интересных фишек</p>
+{% endblock content %}
