--- a/basketforum/templates/users/login.html
+++ b/basketforum/templates/users/login.html
@@ -20,6 +20,7 @@
           {{ form.password }}
         </div>
         <button type="submit" class="btn btn-primary">Войти</button>
+        <a href="{% url 'register' %}">Нет аккаунта?</a>
       </form>
     </div>
   </body>
