--- a/basketforum/templates/blog/profile.html
+++ b/basketforum/templates/blog/profile.html
@@ -5,8 +5,8 @@
 <main>
       <section class="user-info">
         <div class="user-details">
-          <h1>Имя пользователя</h1>
-          <p>Электронная почта: user@example.com</p>
+          <h1>Никнейм:</h1>
+          <p>Электронная почта: </p>
           <p>Дата регистрации: 01.01.2022</p>
         </div>
       </section>
